--- a/openrem/remapp/templates/remapp/displaychartoptions.html
+++ b/openrem/remapp/templates/remapp/displaychartoptions.html
@@ -28,7 +28,7 @@
 
             <!-- First column div with all fields except the colour map choice -->
             <div class="col-md-2">
-                <table>
+                <table aria-describedby="General chart options">
                 {% for field in GeneralChartOptionsForm %}
                     {{ field.errors }}
                     <tr>
@@ -68,7 +68,7 @@
         <h3 class="panel-title">CT chart options</h3>
       </div>
       <div class="panel-body">
-        <table>
+        <table aria-describedby="CT chart options">
           {% csrf_token %}
           {{ CTChartOptionsForm }}
         </table>
@@ -79,7 +79,7 @@
         <h3 class="panel-title">Radiographic chart options</h3>
       </div>
       <div class="panel-body">
-        <table>
+        <table aria-describedby="Radiographic chart options">
           {% csrf_token %}
           {{ DXChartOptionsForm }}
         </table>
@@ -90,7 +90,7 @@
         <h3 class="panel-title">Fluoroscopy chart options</h3>
       </div>
       <div class="panel-body">
-        <table>
+        <table aria-describedby="Fluoroscopy chart options">
           {% csrf_token %}
           {{ RFChartOptionsForm }}
         </table>
@@ -101,7 +101,7 @@
         <h3 class="panel-title">Mammography chart options</h3>
       </div>
       <div class="panel-body">
-        <table>
+        <table aria-describedby="Mammography chart options">
           {% csrf_token %}
           {{ MGChartOptionsForm }}
         </table>
