- positioned the form from individual modality filter pages to filtered base - positioned the form in such a way that it envelops <div class="col-md-9"> AND <div class="col-md-3"> (studylist and the default filter) - added advancedfilter block in filtered base - added link to advanced filter in header of "exam filter" for each modality filter page - added javascript in jsblock for each modality filter page - added advanced filter itself in ct filter page
- a lot more to be done....[skip ci]
- main tasks:
1) take care it works in conjunction with charts. Seems doable.
2) implement for other modalities
3) make it a "option" for administrator to switch option on (per user?)

--- a/openrem/remapp/templates/remapp/dxfiltered.html
+++ b/openrem/remapp/templates/remapp/dxfiltered.html
@@ -61,52 +61,58 @@
 
     {{ studyfilter }}
 
-    <form action="{% url 'dx_summary_list_filter' %}" method="get" class="form-horizontal" role="form"
-          id="examFilterForm">
-        <div class="panel panel-info small">
-            <div class="panel-heading">
-                <h3 class="panel-title">Exam filter</h3>
-            </div>
-            <div class="panel-body">
-                <i>Date format yyyy-mm-dd</i>
-                {% for field in filter.form.visible_fields %}
-                    <div class="form-group">
-                        <div class="col-xs-4">
-                            <label>{{ field.label_tag }}</label>
-                        </div>
-                        <div class="col-xs-8">
-                            {{ field.errors }}
-                            {{ field }}
-                        </div>
-                    </div>
-                {% endfor %}
-                {% for field in filter.form.hidden_fields %}
-                    <div style="display:none">{{ field }}</div>
-                {% endfor %}
-                <input class="btn btn-default" name="submit" type="submit"/>
-
-            </div>
-            <div class="panel-heading">
-                <h3 class="panel-title">Chart options</h3>
-            </div>
-            <div class="panel-body">
-                <table>
-                    {% csrf_token %}
-                    {{ chartOptionsForm }}
-                </table>
-                <input class="btn btn-default" name="submit" type="submit" id="examFilterFormSubmit"/>
-            </div>
-            <div class="panel-heading">
-                <h3 class="panel-title">Table options</h3>
-            </div>
-            <div class="panel-body">
-                <table>
-                    {{ itemsPerPageForm }}
-                </table>
-                <input class="btn btn-default" name="submit" type="submit"/>
-            </div>
+    <div class="panel panel-info small">
+        <div class="panel-heading"  {% if advancedSearchAvailable %}hidden{% endif %}>
+            <table style="width: 100%;">
+                <tr>
+                    <td><h3 class="panel-title">Exam filter</h3></td>
+                    <td style="text-align: right;" >
+                        <a href="{% url 'dx_summary_list_filter' %}?advanced_search=True">
+                            <small>Switch to advanced filtering</small>
+                        </a>
+                    </td>
+                </tr>
+            </table>
         </div>
-    </form>
+        <div class="panel-body" {% if advancedSearchAvailable %}hidden{% endif %}>
+            <i>Date format yyyy-mm-dd</i>
+            {% for field in filter.form.visible_fields %}
+                <div class="form-group">
+                    <div class="col-xs-4">
+                        <label>{{ field.label_tag }}</label>
+                    </div>
+                    <div class="col-xs-8">
+                        {{ field.errors }}
+                        {{ field }}
+                    </div>
+                </div>
+            {% endfor %}
+            {% for field in filter.form.hidden_fields %}
+                <div style="display:none">{{ field }}</div>
+            {% endfor %}
+            <input class="btn btn-default" name="submit" type="submit"/>
+
+        </div>
+        <div class="panel-heading">
+            <h3 class="panel-title">Chart options</h3>
+        </div>
+        <div class="panel-body">
+            <table>
+                {% csrf_token %}
+                {{ chartOptionsForm }}
+            </table>
+            <input class="btn btn-default" name="submit" type="submit" id="examFilterFormSubmit"/>
+        </div>
+        <div class="panel-heading">
+            <h3 class="panel-title">Table options</h3>
+        </div>
+        <div class="panel-body">
+            <table>
+                {{ itemsPerPageForm }}
+            </table>
+            <input class="btn btn-default" name="submit" type="submit"/>
+        </div>
+    </div>
 
     <script src="{{ STATIC_URL }}js/datepicker.js"></script>
     <script src="{{ STATIC_URL }}js/formatDate.js"></script>
@@ -232,6 +238,23 @@
         {% endfor %}
     </table>
 
+{% endblock %}
+
+{% block jsblock %}
+    <script src="{{ STATIC_URL }}js/advancedSearch.js"></script>
+    <script>
+        let staticurl = "{{ STATIC_URL|safe }}";
+        let filterOptionsJSON = {{ json_filter_options|safe }};
+        let searchString = "{{ advancedSearchString|safe }}";
+        $(document).ready(function() {
+            initializeJSON(filterOptionsJSON, staticurl);
+            document.getElementById("id_advanced_search_string").value = searchString;
+            if (!!(searchString.trim()))
+                createBuilderFromSearchString(searchString);
+            else
+                addSearchBuilderLine(-1, true);
+        })
+    </script>
 {% endblock %}
 
 {% block plotdata %}
