Refs issue #17 complexing filtering
- Working filtering for CT.
- HTML files for modalities are finished
- views.py has to be adapted for dx, mg and rf.
- In advanced_search_functions "get_advanced_search_options" must be added for dx, mg and rf
- In models.py "verbose_name" has to be added to make name of filter parameter more clear

[skip ci]

--- a/openrem/remapp/templates/remapp/mgfiltered.html
+++ b/openrem/remapp/templates/remapp/mgfiltered.html
@@ -73,20 +73,22 @@
                 </tr>
             </table>
         </div>
-        <div class="panel-body">
-            <i>Date format yyyy-mm-dd</i>
-                    {% for field in filter.form %}
-                        <div class="form-group">
-                            <div class="col-xs-4">
-                                <label>{{ field.label_tag }}</label>
-                            </div>
-                            <div class="col-xs-8">
-                              {{ field.errors }}
-                              {{ field }}
-                            </div>
+        <div class="panel-body" {% if advancedSearchAvailable %}hidden{% endif %}>
+            {% if not advancedSearchAvailable %}
+                <i>Date format yyyy-mm-dd</i>
+                {% for field in filter.form %}
+                    <div class="form-group">
+                        <div class="col-xs-4">
+                            <label>{{ field.label_tag }}</label>
                         </div>
-                    {% endfor %}
+                        <div class="col-xs-8">
+                          {{ field.errors }}
+                          {{ field }}
+                        </div>
+                    </div>
+                {% endfor %}
                 <input class="btn btn-default" type="submit" />
+            {% endif %}
         </div>
         <div class="panel-heading">
             <h3 class="panel-title">Chart options</h3>
@@ -217,11 +219,13 @@
         let searchString = "{{ advancedSearchString|safe }}";
         $(document).ready(function() {
             initializeJSON(filterOptionsJSON, staticurl);
-            document.getElementById("id_advanced_search_string").value = searchString;
-            if (!!(searchString.trim()))
-                createBuilderFromSearchString(searchString);
-            else
-                addSearchBuilderLine(-1, true);
+            if (document.getElementById("id_advanced_search_string") != null) {
+                document.getElementById("id_advanced_search_string").value = searchString;
+                if (!!(searchString.trim()))
+                    createBuilderFromSearchString(searchString);
+                else
+                    addSearchBuilderLine(-1, true);
+            }
         })
     </script>
 {% endblock %}
