--- a/openrem/remapp/templates/remapp/dxfiltered.html
+++ b/openrem/remapp/templates/remapp/dxfiltered.html
@@ -75,18 +75,20 @@
             </table>
         </div>
         <div class="panel-body" {% if advancedSearchAvailable %}hidden{% endif %}>
-            <i>Date format yyyy-mm-dd</i>
-            {% for field in filter.form.visible_fields %}
-                <div class="form-group">
-                    <div class="col-xs-4">
-                        <label>{{ field.label_tag }}</label>
+            {% if not advancedSearchAvailable %}
+                <i>Date format yyyy-mm-dd</i>
+                {% for field in filter.form.visible_fields %}
+                    <div class="form-group">
+                        <div class="col-xs-4">
+                            <label>{{ field.label_tag }}</label>
+                        </div>
+                        <div class="col-xs-8">
+                            {{ field.errors }}
+                            {{ field }}
+                        </div>
                     </div>
-                    <div class="col-xs-8">
-                        {{ field.errors }}
-                        {{ field }}
-                    </div>
-                </div>
-            {% endfor %}
+                {% endfor %}
+            {% endif %}
             {% for field in filter.form.hidden_fields %}
                 <div style="display:none">{{ field }}</div>
             {% endfor %}
@@ -248,11 +250,13 @@
         let searchString = "{{ advancedSearchString|safe }}";
         $(document).ready(function() {
             initializeJSON(filterOptionsJSON, staticurl);
-            document.getElementById("id_advanced_search_string").value = searchString;
-            if (!!(searchString.trim()))
-                createBuilderFromSearchString(searchString);
-            else
-                addSearchBuilderLine(-1, true);
+            if (document.getElementById("id_advanced_search_string") != null) {
+                document.getElementById("id_advanced_search_string").value = searchString;
+                if (!!(searchString.trim()))
+                    createBuilderFromSearchString(searchString);
+                else
+                    addSearchBuilderLine(-1, true);
+            }
         })
     </script>
 {% endblock %}
