--- a/openrem/remapp/templates/remapp/displayname-modality.html
+++ b/openrem/remapp/templates/remapp/displayname-modality.html
@@ -18,6 +18,9 @@
     <th scope="col">Gantry ID</th>
     <th scope="col">How many studies</th>
     <th scope="col">Date of last study</th>
+    {% if dual %}
+      <th scope="col">Skin map enabled</th>
+    {% endif %}
     {% if admin.admingroup %}
     <th scope="col">Review</th>
     {% endif %}
@@ -69,6 +72,30 @@
                 }
             )
         </script>
+      {% if dual %}
+          <td id="{{ modality }}-skin-{{ eachrow.pk }}"></td>
+            <script>
+                $(document).ready(
+                    function get_latest_studies(json) {
+                        $.ajax(
+                            {
+                                url: "{% url 'display_name_skin_enabled' %}",
+                                data: {
+                                    modality: '{{ modality }}',
+                                    equip_name_pk: '{{ eachrow.pk }}',
+                                    csrfmiddlewaretoken: '{{ csrf_token }}'
+                                },
+                                type: "POST",
+                                success: function (data) {
+                                    $('#{{ modality }}-skin-{{ eachrow.pk }}').html(data);
+                                }
+                            }
+                        )
+
+                    }
+                )
+            </script>
+        {% endif %}
     {% if admin.admingroup %}
       <td><a href="{% url 'review_summary_list' equip_name_pk=eachrow.pk modality=modality %}">Review</a></td>
     {% endif %}
