--- a/openrem/remapp/templates/remapp/openskinsafelist_add.html
+++ b/openrem/remapp/templates/remapp/openskinsafelist_add.html
@@ -20,26 +20,32 @@
             <h3>Add a unit's entry to the openSkin calculation safe list</h3>
 
             {% if admin.admingroup %}
-                <p>
-                    Manufacturer <b>{{ equipment.manufacturer }}</b>
-                    and model <b>{{ equipment.manufacturer_model_name }}</b>
-                    and software version <b>{{ equipment.software_versions }}</b>.
-                </p>
-                <div class="col-md-8 col-md-offset-2">
+                <h4>This unit</h4>
+                <table class="table table-bordered sortable" aria-describedby="This unit details">
+                <thead>
+                <tr>
+                    <th scope="col">Manufacturer</th>
+                    <th scope="col">Model</th>
+                    <th scope="col">Software version</th>
+                </tr>
+                </thead>
+                <tr>
+                    <td>{{ equipment.manufacturer }}</td>
+                    <td>{{ equipment.manufacturer_model_name }}</td>
+                    <td>{{ equipment.software_versions }}</td>
+                </tr>
+                </table>
                     <form method="post">
                         {% csrf_token %}
                         {{ form.manufacturer.as_hidden }}
                         {{ form.manufacturer_model_name.as_hidden }}
                         {{ form.software_version.as_hidden }}
-                            <input type="submit" value="Add model to list" name="model" class="btn btn-default">
-                            <input type="submit" value="Add model and version to list" name="version" class="btn btn-default">
+                            <input type="submit" value="Add model and this version to list" name="version" class="btn btn-default">
+                            <input type="submit" value="Add the model to safe list" name="model" class="btn btn-default">
                         <a href="{% url 'display_names_view' %}" role="button" class="btn btn-default">
                             Cancel and return to display names page
                         </a>
                     </form>
-
-                </div>
-
             {% else %}
                 <p>
                     <strong>Only users in the Admin group can modify the openSkin safe list.</strong>
@@ -49,9 +55,11 @@
     </div>
     <div class="row">
         <div class="col-md-offset-3 col-md-6">
-            <h4>Display name units that are currently on the openSkin safe list with this rule</h4>
-            {% if not object.software_version %}
+                <h4>If you add the model and software version into the safe list entry, only the following units will be
+                    marked as safe</h4>
                 <table class="table table-bordered table-hover sortable">
+                <thead>
+                <tr>
                     <th scope="col">Display name</th>
                     <th scope="col">Institution</th>
                     <th scope="col">Department</th>
@@ -61,6 +69,40 @@
                     <th scope="col">Serial no.</th>
                     <th scope="col">Software version</th>
                     <th scope="col">Gantry ID</th>
+                </tr>
+                </thead>
+                <tbody>
+                    {% for eachrow in manufacturer_model_version %}
+                        <tr>
+                            <td>{{ eachrow.display_name }}</td>
+                            <td>{{ eachrow.institution_name }}</td>
+                            <td>{{ eachrow.institutional_department_name }}</td>
+                            <td>{{ eachrow.manufacturer }}</td>
+                            <td>{{ eachrow.manufacturer_model_name }}</td>
+                            <td>{{ eachrow.station_name }}</td>
+                            <td>{{ eachrow.device_serial_number }}</td>
+                            <td>{{ eachrow.software_versions }}</td>
+                            <td>{{ eachrow.gantry_id }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+
+                </table>
+            <h4>If you add the model to the safe list, all the following units will be marked as safe</h4>
+                <table class="table table-bordered table-hover sortable">
+                <thead>
+                <tr>
+                    <th scope="col">Display name</th>
+                    <th scope="col">Institution</th>
+                    <th scope="col">Department</th>
+                    <th scope="col">Manufacturer</th>
+                    <th scope="col">Model</th>
+                    <th scope="col">Station name</th>
+                    <th scope="col">Serial no.</th>
+                    <th scope="col">Software version</th>
+                    <th scope="col">Gantry ID</th>
+                </tr>
+                </thead>
 
                     {% for eachrow in manufacturer_model %}
                         <tr>
@@ -77,87 +119,6 @@
                     {% endfor %}
                 </table>
 
-                <h4>If you add the software version into the safe list entry, only the following units will be
-                    marked as safe</h4>
-                <table class="table table-bordered table-hover sortable">
-                    <th scope="col">Display name</th>
-                    <th scope="col">Institution</th>
-                    <th scope="col">Department</th>
-                    <th scope="col">Manufacturer</th>
-                    <th scope="col">Model</th>
-                    <th scope="col">Station name</th>
-                    <th scope="col">Serial no.</th>
-                    <th scope="col">Software version</th>
-                    <th scope="col">Gantry ID</th>
-
-                    {% for eachrow in manufacturer_model_version %}
-                        <tr>
-                            <td>{{ eachrow.display_name }}</td>
-                            <td>{{ eachrow.institution_name }}</td>
-                            <td>{{ eachrow.institutional_department_name }}</td>
-                            <td>{{ eachrow.manufacturer }}</td>
-                            <td>{{ eachrow.manufacturer_model_name }}</td>
-                            <td>{{ eachrow.station_name }}</td>
-                            <td>{{ eachrow.device_serial_number }}</td>
-                            <td>{{ eachrow.software_versions }}</td>
-                            <td>{{ eachrow.gantry_id }}</td>
-                        </tr>
-                    {% endfor %}
-                </table>
-            {% else %}
-                <table class="table table-bordered table-hover sortable">
-                    <th scope="col">Display name</th>
-                    <th scope="col">Institution</th>
-                    <th scope="col">Department</th>
-                    <th scope="col">Manufacturer</th>
-                    <th scope="col">Model</th>
-                    <th scope="col">Station name</th>
-                    <th scope="col">Serial no.</th>
-                    <th scope="col">Software version</th>
-                    <th scope="col">Gantry ID</th>
-
-                    {% for eachrow in manufacturer_model_version %}
-                        <tr>
-                            <td>{{ eachrow.display_name }}</td>
-                            <td>{{ eachrow.institution_name }}</td>
-                            <td>{{ eachrow.institutional_department_name }}</td>
-                            <td>{{ eachrow.manufacturer }}</td>
-                            <td>{{ eachrow.manufacturer_model_name }}</td>
-                            <td>{{ eachrow.station_name }}</td>
-                            <td>{{ eachrow.device_serial_number }}</td>
-                            <td>{{ eachrow.software_versions }}</td>
-                            <td>{{ eachrow.gantry_id }}</td>
-                        </tr>
-                    {% endfor %}
-                </table>
-                <h4>If you remove the software version from the safe list entry, the following units will also be
-                    marked as safe</h4>
-                <table class="table table-bordered table-hover sortable">
-                    <th scope="col">Display name</th>
-                    <th scope="col">Institution</th>
-                    <th scope="col">Department</th>
-                    <th scope="col">Manufacturer</th>
-                    <th scope="col">Model</th>
-                    <th scope="col">Station name</th>
-                    <th scope="col">Serial no.</th>
-                    <th scope="col">Software version</th>
-                    <th scope="col">Gantry ID</th>
-
-                    {% for eachrow in manufacturer_model %}
-                        <tr>
-                            <td>{{ eachrow.display_name }}</td>
-                            <td>{{ eachrow.institution_name }}</td>
-                            <td>{{ eachrow.institutional_department_name }}</td>
-                            <td>{{ eachrow.manufacturer }}</td>
-                            <td>{{ eachrow.manufacturer_model_name }}</td>
-                            <td>{{ eachrow.station_name }}</td>
-                            <td>{{ eachrow.device_serial_number }}</td>
-                            <td>{{ eachrow.software_versions }}</td>
-                            <td>{{ eachrow.gantry_id }}</td>
-                        </tr>
-                    {% endfor %}
-                </table>
-            {% endif %}
         </div>
     </div>
 
